--- a/plugin-rust-server/src/main/resources/buildServerResources/rust-settings.css
+++ b/plugin-rust-server/src/main/resources/buildServerResources/rust-settings.css
@@ -1,3 +1,10 @@
+/*
+ * Copyright 2000-2020 JetBrains s.r.o.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License").
+ * See LICENSE in the project root for license information.
+ */
+
 .rust.left {
     float: left;
 }
